// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createBasicAuthMiddleware > array mode > should throw 401 when password does not match 1`] = `"Invalid credentials"`;

exports[`createBasicAuthMiddleware > array mode > should throw 401 when username not found 1`] = `"Invalid credentials"`;

exports[`createBasicAuthMiddleware > authorization type > should throw 401 when authorization type is not basic 1`] = `"Invalid Authorization header"`;

exports[`createBasicAuthMiddleware > constant-time comparison > should throw 401 for an unknown username 1`] = `
{
  "reason": "verify_callback_rejected",
  "username": "unknown",
}
`;

exports[`createBasicAuthMiddleware > credentials format > should throw 401 when credentials format is invalid (no colon) 1`] = `"Invalid credentials"`;

exports[`createBasicAuthMiddleware > custom verify function > should use the custom verify function verbatim and map its rejection to 401 1`] = `"Invalid credentials"`;

exports[`createBasicAuthMiddleware > redaction > should not log the decoded credentials when they are malformed 1`] = `
{
  "reason": "malformed_credentials",
}
`;

exports[`createBasicAuthMiddleware > redaction > should not log the password when the password does not match 1`] = `
{
  "reason": "verify_callback_rejected",
  "username": "admin",
}
`;

exports[`createBasicAuthMiddleware > redaction > should not log the password when the verify callback rejects 1`] = `
{
  "reason": "verify_callback_rejected",
  "username": "admin",
}
`;
